Added Exception files, Added Service files and rebased the service structure to better match the current Database structure.