@@ -1,12 +1,19 @@
-package com.nvivx.vixhealthsystem.infrastructure;
+package com.nvivx.vixhealthsystem.service.scheduling;
 
-import com.nvivx.vixhealthsystem.model.staff.Vacation;
+import com.nvivx.vixhealthsystem.exception.VacationNotFoundException;
+import com.nvivx.vixhealthsystem.model.staff.VacationRequest;
 import com.nvivx.vixhealthsystem.repository.JsonVacationRepository;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Service for managing employee vacation requests (UC29, FR6.2).
+ * Requests are stored in vacations.json — the staff manager
+ * adds and approves them manually through the dashboard.
+ */
 @Service
 public class VacationService {
 
@@ -16,38 +23,66 @@ public class VacationService {
         this.repository = repository;
     }
 
-    public Vacation addVacation(long employeeId, LocalDate startDate, LocalDate endDate, String notes) {
-
-        List<Vacation> vacations = repository.findAll();
-
-        long nextId = vacations.stream()
-                .mapToLong(Vacation::getId)
-                .max()
-                .orElse(0L) + 1;
-
-        Vacation vacation = new Vacation(nextId, employeeId, startDate, endDate, notes);
-
-        vacations.add(vacation);
-
-        repository.saveAll(vacations);
-
-        return vacation;
+    /**
+     * Creates a new vacation request with PENDING status.
+     * UC29 — staff manager manually adds vacation requests on behalf of employees.
+     */
+    public VacationRequest addVacationRequest(int employeeId, String employeeName,
+                                              LocalDate startDate, LocalDate endDate,
+                                              String reason) {
+        VacationRequest request = new VacationRequest(
+                0, // ID assigned by repository
+                employeeId,
+                employeeName,
+                startDate,
+                endDate,
+                reason,
+                "PENDING"
+        );
+        return repository.save(request);
     }
 
-    public void deleteVacation(long id) {
-
-        List<Vacation> vacations = repository.findAll();
-
-        vacations.removeIf(v -> v.getId() == id);
-
-        repository.saveAll(vacations);
+    /**
+     * Approves a vacation request. UC29.
+     */
+    public VacationRequest approveVacation(int id) {
+        VacationRequest request = repository.findById(id)
+                .orElseThrow(() -> new VacationNotFoundException("Vacation request not found: " + id));
+        request.setStatus("APPROVED");
+        return repository.save(request);
     }
 
-    public List<Vacation> getEmployeeVacations(long employeeId) {
+    /**
+     * Denies a vacation request. UC29.
+     */
+    public VacationRequest denyVacation(int id) {
+        VacationRequest request = repository.findById(id)
+                .orElseThrow(() -> new VacationNotFoundException("Vacation request not found: " + id));
+        request.setStatus("DENIED");
+        return repository.save(request);
+    }
 
-        return repository.findAll()
-                .stream()
+    /** Returns all vacation requests. */
+    public List<VacationRequest> getAllRequests() {
+        return repository.findAll();
+    }
+
+    /** Returns only pending requests. */
+    public List<VacationRequest> getPendingRequests() {
+        return repository.findAll().stream()
+                .filter(v -> "PENDING".equals(v.getStatus()))
+                .collect(Collectors.toList());
+    }
+
+    /** Returns all requests for a specific employee. */
+    public List<VacationRequest> getRequestsForEmployee(int employeeId) {
+        return repository.findAll().stream()
                 .filter(v -> v.getEmployeeId() == employeeId)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /** Deletes a vacation request. */
+    public void deleteRequest(int id) {
+        repository.deleteById(id);
     }
 }
